--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 temp_dirs/*
 temp_dirs/undodir/*
 sources_non_forked/ack.vim/.netrwhist
+sources_non_forked/visidian.vim
 temp_dirs/yankring_history_v2.txt
 sources_forked/yankring/doc/tags
 sources_non_forked/tlib/doc/tags
